--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>My Portfolio</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="LMolinaro01, Leonardo Molinaro, Python" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Leonardo Molinaro | Developer" />
 
     <link
       rel="stylesheet"
@@ -46,10 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Leonardo Molinaro</span>
           <br />
-          I'm the Unknown Developer.
-        </h1>
+          I am a Computer Science Graduate        </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
             >Know more</a
@@ -79,10 +78,11 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                I am a developer with a genuine passion for problem-solving and creating solutions that truly make a difference. My programming journey began in 2018, when I started developing games in Unity using C# in a game development course. Since then, I've expanded my skills across various areas of technology. With a solid programming background and experience in a wide range of technologies—from desktop software development to IoT and web applications—I am always looking for new challenges.
+
+My approach focuses on delivering efficient, optimized, and well-constructed solutions, with special attention to user experience and system integration.
               </p>
-              <p class="about-wrapper__info-text">
+             <!--<p class="about-wrapper__info-text">
                 Extra Information about you! like hobbies and your goals.
               </p>
               <span class="d-flex mt-3">
@@ -93,7 +93,7 @@
                   href="assets/resume.pdf"
                 >
                   View Resume
-                </a>
+                </a> --> 
               </span>
             </div>
           </div>
@@ -112,27 +112,27 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Snap Link</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    Python-based software that links an Arduino and ESP32, capturing and timestamping images with a CustomTkinter GUI. Skills used: Python, Arduino/ESP32 integration, GUI development, unit testing, and image processing. Proactively resolved connectivity and UI issues for a smooth user experience.
+<br><br>
+                    (Python / Arduino / ESP32 / Unit Test)
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://www.youtube.com/watch?v=gqIQ7TYz2Yg"
                 >
-                  See Live
+                  Video Demo
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/LMolinaro01/SnapLink"
                 >
                   Source Code
                 </a>
@@ -140,7 +140,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://www.youtube.com/watch?v=gqIQ7TYz2Yg" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -151,7 +151,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/p1.png"
                     />
                   </div>
                 </a>
@@ -164,27 +164,27 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Physiotherapy Patient Management System</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    Project designed as part of a college extension project for a client. It is academic and non-profit, aiming to address real-world issues through object-oriented programming in Java, database integration, and visual interfaces.
+<br><br>
+                    (Java / Database / Swing / MVC Architecture)
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://www.youtube.com/watch?v=d6Is6V5wG5Q"
                 >
-                  See Live
+                  Video Demo
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/LMolinaro01/Gerenciador-de-Pacientes"
                 >
                   Source Code
                 </a>
@@ -192,7 +192,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://www.youtube.com/watch?v=d6Is6V5wG5Q" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -203,7 +203,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/p2.png"
                     />
                   </div>
                 </a>
@@ -216,26 +216,28 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Snap Stock</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills. 
-                    Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
+                    Mobile application developed with React Native for efficient stock management. It enables users to securely log in, add, view, and manage products, with data persistence and secure session management.
+                    <br><br>
+
+                    (React Native / JavaScript / Unit Test / Data Persistence / Hashed Encryption)
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://www.youtube.com/watch?v=ecr5YdzFdSE"
                 >
-                  See Live
+                  Video Demo
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/LMolinaro01/SnapStock"
                 >
                   Source Code
                 </a>
@@ -243,7 +245,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://www.youtube.com/watch?v=ecr5YdzFdSE" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -254,7 +256,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/p3.png"
                     />
                   </div>
                 </a>
@@ -272,17 +274,19 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Feel free to reach out through the link below:</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="https://linktr.ee/leomolinarodev01"
           >
+            My Linktree
+          </a>
         </div>
       </div>
     </section>
+    
     <!-- /END Contact Section -->
 
     <!-- **** Footer Section **** -->
@@ -292,13 +296,11 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+
+          <a rel="noreferrer" href="https://www.linkedin.com/in/leonardo-molinaro-109244277/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/LMolinaro01" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
