--- a/src/index.html
+++ b/src/index.html
@@ -264,6 +264,58 @@ My approach focuses on delivering efficient, optimized, and well-constructed sol
             </div>
           </div>
           <!-- /END Project -->
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Japanese Animation Website</h3>
+                <div>
+                  <p class="mb-4">
+                    Site dedicated to discussing the <i>One Piece</i> universe, using HTML, CSS, JavaScript, PHP and Database Integration technologies.
+                    <br><br>
+
+                    (HTML5 / CSS / JavaScriptt / PHP )
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/LMolinaro01/One-Piece-Website"
+                >
+                  Video Demo
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/LMolinaro01/One-Piece-Website"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://github.com/LMolinaro01/One-Piece-Website" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/p4.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div>
     </section>
